BJS2-53851 fixed by comments